<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="T_CCS_CFG" Id="{560b22ba-8c55-4bb4-98cd-67316ecb02e0}">
    <Declaration><![CDATA[TYPE T_CCS_CFG:
STRUCT
	site:     TrkSiteConstants;
	mudpi:    T_MUDPI_CFG;
	ip_address:  Tc2_System.T_IPv4Addr := '192.168.1.2';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>