<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="T_CCS_GUI" Id="{705c807a-c833-41b2-b622-9d1055736495}">
    <Declaration><![CDATA[TYPE T_CCS_GUI :
STRUCT
	alt: LREAL;            //[deg]
	az: LREAL;             //[deg]
	pa: LREAL;             //[deg]
	time_tai: STRING;      //[string]
	lst: LREAL;            //[rad]
	ra: LREAL;             //[rad] to be hms in the future
	dec: LREAL;            //[rad] to be dms in the future
	north_angle: LREAL;     //[deg]
	pupil_angle: LREAL;    //[deg]
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>