<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="T_CCS_STAT" Id="{693d7232-aeb8-4e46-afca-4408b6a8a506}">
    <Declaration><![CDATA[TYPE T_CCS_STAT:
STRUCT
	data       :        PointingKernelPositions;
	// this struct show the same data with different units
	gui_data   :        T_CCS_GUI;
END_STRUCT
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>